Quality pass M0-M4: one FFB composition, Nm end-to-end, live tuning, mount linking
M0 — One composition, one truth: the shipping FFB math moves into the
engine as FfbPipeline (telemetry + soft lock + damper/friction + strike
impulses -> soft-knee mixer -> SafetyChain, ingress hygiene, clock
mapping, engage edges on the step thread) and FfbService (250 Hz thread,
absolute-deadline pacing + jitter stats, device lifecycle). The offline
driving harness now runs the exact shipping composition; FfbController
shrinks to a thin adapter. New FfbPipelineTest/FfbServiceTest pin
wiring, engage/fault edges, tuning swaps, device handoff, and
hostile-ingress bounds.

M1 — Feel-loop correctness: bridge STATE hardware angle/velocity feeds
the loop at 250 Hz (HardwareAngleSource - revives the soft lock, puts
damper/friction on true wheel velocity); torque is Nm end-to-end through
the HAL (removes the hardcoded rated-torque double conversion that
falsified the clamp); sidecar FLAG_FAULT panics the chain
(FaultingDevice); GLFW pedals bind (poll before autoBind).

M2 — Tuning without recompiling: FfbTuning record + FeelConfig
hot-reload TOML (config/aeronautics_simwheel-feel.toml, commented
defaults on first run, mtime-polled, range-clamped, parse errors keep
last good); safety-parameter edits re-ramp from zero; HUD gains loop
stats + tuning + config status lines.

M3 — Robustness sweep: demo-toggle-off rebinds the GLFW adapter;
per-sender input-packet rate gate; sidecar SIGINT/SIGTERM clean stop
(Drop runs on Ctrl-C) + strict integer arg parsing; conformance test
finds the sidecar binary on all platforms (was silently skipped
off-Windows); mods.toml declares Offroad/Sable honestly; dead code
deleted (ThrottleQuantizer, EngagementStateMachine, toggle-mode
scaffolding); version single-sourced from gradle.properties.

M4 — Phase 3 mount linking: stick = linker tool; links stored as
offsets in the wheel BE NBT; MountLinks index + the first mixin
(WheelMountBlockEntityMixin: computeYaw HEAD